VSMT_UPROT_APP/deployment/k8s/redis_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: NAMESPACE_TO_BE_REPLACED
  name: REDIS_DEPLOYMENT_NAME_TO_BE_REPLACED
spec:
  replicas: 1
  selector:
    matchLabels:
      app: REDIS_DEPLOYMENT_NAME_TO_BE_REPLACED
  template:
    metadata:
      labels:
        app: REDIS_DEPLOYMENT_NAME_TO_BE_REPLACED
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: REDIS_CONTAINER_NAME_TO_BE_REPLACED
          image: REDIS_IMAGE_NAME_TO_BE_REPLACED
          command:
            - redis-server
            - "/redis-master/redis.conf"
          ports:
          - containerPort: 6379
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 500m
              memory: 2000Mi
          volumeMounts:
          - mountPath: /redis-master-data
            name: data
          - mountPath: /redis-master
            name: config
      volumes:
        - name: data
          emptyDir: {}
        - name: config
          configMap:
            name: example-redis-config
            items:
            - key: redis-config
              path: redis.conf
