VSMT_UPROT_APP/deployment/k8s/vsmt_uprot_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SERVICE_NAME_TO_BE_REPLACED
  namespace: NAMESPACE_TO_BE_REPLACED
spec:
  ports:
    - protocol: TCP
      port: PORT_TO_BE_REPLACED
      targetPort: TARGET_PORT_TO_REPLACE
      name: vsmt-uprot-app
  selector:
    app: SERVICE_SELECTOR_TO_BE_REPLACED
